--- a/pruebaConexionBBDD01/.classpath
+++ b/pruebaConexionBBDD01/.classpath
@@ -6,6 +6,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Stuka/Documents/Librerias de Java/mysql-connector-java-8.0.26/mysql-connector-java-8.0.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stuka/Documents/Librerias de Java/mysql-connector-java-8.0.26/mysql-connector-java-8.0.26.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Stuka/Documents/Librerias de Java/ojdbc11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
